--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,10 @@ spring.thymeleaf.prefix=classpath:/static/
 # hibernate 관련
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 
+# 얘는 로그에 찍힘 SQL이 다 보이게 됨
+logging.level.org.hibernate.SQL=debug
+# SQL 파라미터도 출력시켜줌
+logging.level.org.hibernate.type=trace
