--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://springboot-db.cfxeyq2zcn3r.ap-northeast-2.rds.amazonaws.com:3306/todayrecipe
-spring.datasource.username=code_angler
-spring.datasource.password=test0099
+spring.datasource.url=@@@@
+spring.datasource.username=@@@@
+spring.datasource.password=@@@@
 spring.jpa.hibernate.ddl-auto=update
 
 ### 타임리프 관련 ###
